--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
+
   <string name="app_name">chunks</string>
+  <string name="days_tabs_yesterday">@string/yesterday</string>
+  <string name="days_tabs_today">@string/today</string>
+  <string name="days_tabs_tomorrow">@string/tomorrow</string>
+
 </resources>
