Add styles for entry input widget

--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -5,5 +5,6 @@
   <string name="days_tabs_today">@string/today</string>
   <string name="days_tabs_tomorrow">@string/tomorrow</string>
   <string name="chunks_menu_settings">@string/settings</string>
+  <string name="entry_input_hint">@string/add_a_new_task</string>
 
 </resources>
