--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -6,5 +6,8 @@
   <string name="days_tabs_tomorrow">@string/tomorrow</string>
   <string name="chunks_menu_settings">@string/settings</string>
   <string name="entry_input_hint">@string/add_a_new_task</string>
+  <string name="entry_widget_delete">@string/emoji_cross_mark</string>
+  <string name="entry_widget_move_to_tomorrow">@string/emoji_rightwards_arrow_with_hook</string>
+  <string name="entry_widget_move_to_today">@string/emoji_leftwards_arrow_with_hook</string>
 
 </resources>
