--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
   <string name="chunks_app_bar_title">@string/app_name</string>
   <string name="days_tabs_today">@string/today</string>
   <string name="days_tabs_tomorrow">@string/tomorrow</string>
-  <string name="days_tabs_sometime">@string/sometime</string>
+  <string name="days_tabs_sometime">@string/later</string>
   <string name="entry_input_hint">@string/add_a_new_task</string>
   <string name="entry_widget_delete">@string/emoji_cross_mark</string>
   <string name="entry_widget_move_right">@string/emoji_rightwards_arrow_with_hook</string>
