--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -12,6 +12,7 @@
   <string name="action_move_to_today">@string/move_to_today</string>
   <string name="action_move_to_tomorrow">@string/move_to_tomorrow</string>
   <string name="action_move_to_later">@string/move_to_later</string>
+  <string name="action_edit">@string/edit</string>
   <string name="action_delete">@string/delete</string>
 
 </resources>
