--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -6,6 +6,8 @@
   <string name="days_tabs_tomorrow">@string/tomorrow</string>
   <string name="days_tabs_sometime">@string/later</string>
   <string name="entry_input_hint">@string/add_a_new_task</string>
+  <string name="action_mark_complete">@string/mark_complete</string>
+  <string name="action_mark_not_complete">@string/mark_not_complete</string>
   <string name="action_move_to_today">@string/move_to_today</string>
   <string name="action_move_to_tomorrow">@string/move_to_tomorrow</string>
   <string name="action_move_to_later">@string/move_to_later</string>
