--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -13,5 +13,7 @@
   <string name="action_move_to_later">@string/move_to_later</string>
   <string name="action_edit">@string/edit</string>
   <string name="action_delete">@string/delete</string>
+  <string name="action_move_up">@string/move_up</string>
+  <string name="action_move_down">@string/move_down</string>
 
 </resources>
